# cpp_template

./: CMakeLists.txt  a.out
etc/: sample-config.yaml
include/: configuration.h  omicron_api.h
src/: configuration.cpp  main.cc  main.cpp  omicron_api.cc  omicron_api.cpp
